Atualizei as funcionalidades do carrinho via javascript, como mandar a quantidade de itens pro balão flutuante no carrinho do header, criei um sistema pra deletar os dados dos itens do carrinho, e por fim, um sistema de armazenamento dos dados do produto no localStorage pra uso

--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
       <div class="checkout-notification">
         <span id="cart">Cart</span>
         <div class="info-noti">
-          <div id="img-noti">
-            <img src="images/image-product-1-thumbnail.jpg">
+          <div id="img-noti-container">
           </div>
           <section>
-            <p>Fall Limited Edition Sneakers</p>
+            <p id="productNotiName"></p>
             <div>
-              <span id="price">&dollar;<span class="price-value">125,00</span> X <span
-                  class="quantity-noti">3</span></span>
-              <b>&dollar;<span class="multiply-result">375,00</span></b>
+              <span id="price"><span class="price-value"></span> <span id="x-noti"></span> <span class="quantity-noti"></span></span>
+              <b><span class="multiply-result"></span></b>
             </div>
           </section>
           <div class="delete-noti">
@@ -81,7 +79,7 @@
     </section>
     <section class="product-info">
       <span id="sneaker-span">Sneaker Company</span>
-      <h1>Fall Limited Edition Sneakers</h1>
+      <h1 id="productName">Fall Limited Edition Sneakers</h1>
       <p>These low-profile sneakers are your perfect casual wear companion. Featuring a durable rubber outer sole,
         they'll withstand everything the weather can offer.</p>
       <div class="product-price">
