--- a/index.html
+++ b/index.html
@@ -18,8 +18,13 @@
     </div>
   </div>
   <header>
+    <div id="hamburguer">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
     <img src="images/logo.svg" id="logo">
-    <nav class="nav-1">
+    <nav class="nav-1 activeMenu">
       <a href="#">Collections</a>
       <a href="#">Men</a>
       <a href="#">Women</a>
@@ -36,8 +41,6 @@
       <div class="checkout-notification">
         <span id="cart">Cart</span>
         <div class="info-noti">
-          <div id="img-noti-container">
-          </div>
           <section>
             <p id="productNotiName"></p>
             <div>
